@@ -13,10 +13,10 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.7.1.SP1.RELEASE</version>
+    <version>5.8.0.RELEASE</version>
     <relativePath />
   </parent>
-  <version>1.8.1.SP1.RELEASE</version>
+  <version>1.9.0.RELEASE</version>
   <name>AIRLINE TICKET RESERVATION SYSTEM Parent POM</name>
   <description>AIRLINE TICKET RESERVATION SYSTEM Parent POM</description>
   <licenses>
@@ -43,6 +43,22 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <annotationProcessorPaths>
+              <path>
+               <groupId>org.mapstruct</groupId>
+               <artifactId>mapstruct-processor</artifactId>
+               <version>${mapstruct.version}</version>
+              </path>
+            </annotationProcessorPaths>
+            <compilerArgs>
+              <arg>-Amapstruct.defaultComponentModel=spring</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
@@ -140,35 +156,11 @@
               <dependencies>
                 <dependency>
                   <groupId>org.apache.activemq</groupId>
-                  <artifactId>activemq-client</artifactId>
-                </dependency>
-                <dependency>
-                  <groupId>org.apache.geronimo.specs</groupId>
-                  <artifactId>geronimo-jms_1.1_spec</artifactId>
-                </dependency>
-                <dependency>
-                  <groupId>org.apache.geronimo.specs</groupId>
-                  <artifactId>geronimo-j2ee-management_1.1_spec</artifactId>
-                </dependency>
-                <dependency>
-                  <groupId>org.fusesource.hawtbuf</groupId>
-                  <artifactId>hawtbuf</artifactId>
+                  <artifactId>artemis-jakarta-client</artifactId>
                 </dependency>
                 <dependency>
                   <groupId>org.slf4j</groupId>
                   <artifactId>slf4j-api</artifactId>
-                </dependency>
-                <dependency>
-                  <groupId>org.apache.activemq</groupId>
-                  <artifactId>activemq-broker</artifactId>
-                </dependency>
-                <dependency>
-                  <groupId>org.apache.activemq</groupId>
-                  <artifactId>activemq-openwire-legacy</artifactId>
-                </dependency>
-                <dependency>
-                  <groupId>jakarta.jms</groupId>
-                  <artifactId>jakarta.jms-api</artifactId>
                 </dependency>
               </dependencies>
             </container>
@@ -215,44 +207,23 @@
       </dependency>
       <!-- == End Database == -->
 
-      <!-- == Begin Thymeleaf == -->
-      <dependency>
-        <groupId>nz.net.ultraq.thymeleaf</groupId>
-        <artifactId>thymeleaf-joda-dialect</artifactId>
-        <version>${thymeleaf-joda-dialect.version}</version>
-      </dependency>
-      <!-- == End Thymeleaf == -->
-
     </dependencies>
   </dependencyManagement>
 
   <properties>
     <!-- == Maven Plugin Versions == -->
-    <org.apache.maven.plugins.maven-war-plugin.version>3.3.1</org.apache.maven.plugins.maven-war-plugin.version>
-    <org.codehaus.mojo.build-helper-maven-plugin.version>3.2.0</org.codehaus.mojo.build-helper-maven-plugin.version>
-    <org.apache.maven.plugins.maven-failsafe-plugin.version>3.0.0-M5</org.apache.maven.plugins.maven-failsafe-plugin.version>
-    <org.apache.maven.plugins.maven-surefire-plugin.version>3.0.0-M5</org.apache.maven.plugins.maven-surefire-plugin.version>
+    <org.apache.maven.plugins.maven-war-plugin.version>3.3.2</org.apache.maven.plugins.maven-war-plugin.version>
+    <org.codehaus.mojo.build-helper-maven-plugin.version>3.3.0</org.codehaus.mojo.build-helper-maven-plugin.version>
+    <org.apache.maven.plugins.maven-failsafe-plugin.version>3.0.0-M7</org.apache.maven.plugins.maven-failsafe-plugin.version>
+    <org.apache.maven.plugins.maven-surefire-plugin.version>3.0.0-M7</org.apache.maven.plugins.maven-surefire-plugin.version>
     <net.revelc.code.formatter.formatter-maven-plugin.version>2.15.0</net.revelc.code.formatter.formatter-maven-plugin.version>
     <org.codehaus.mojo.xml-maven-plugin.version>1.0.2</org.codehaus.mojo.xml-maven-plugin.version>
     <com.mycila.license-maven-plugin.version>4.1</com.mycila.license-maven-plugin.version>
     <!-- == Dependency Versions == -->
-    <postgresql.version>42.3.1</postgresql.version>
-    <thymeleaf-joda-dialect.version>2.0.0</thymeleaf-joda-dialect.version>
+    <postgresql.version>42.5.1</postgresql.version>
     <!-- == Project Properties == -->
     <project.root.basedir>${project.basedir}</project.root.basedir>
     <encoding>UTF-8</encoding>
-    <java-version>1.8</java-version>
+    <java-version>17</java-version>
   </properties>
-  <profiles>
-    <profile>
-      <id>jdk11</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <properties>
-        <java-version>11</java-version>
-        <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
-      </properties>
-    </profile>
-  </profiles>
 </project>
